--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,453 @@
-.App {
+.Navbar{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: whitesmoke;
+  position: fixed;
+  width: 100%;
+  z-index: 999;
+  top: 0;
+  border-bottom: 2px solid white;
+}
+a{
+  text-decoration: none;
+}
+.Navbar_about{
+  color: rgb(0,56,102);
+  margin-right: 30px;
+  font-size: 25px;
+}
+.Navbar_about:hover{
+  opacity: .6 ;
+}
+.Navbar_services:hover{
+  opacity: .6 ;
+
+}
+.Navbar_services{
+  color: rgb(0,56,102);
+  font-size: 25px;
+  margin-right: 40px;
+}
+.About{
+ background-image: url(/src/Images/healthy.jpg);
+ height: 80vh;
+ background-position: center;
+ margin-top: 93px;
+ display: flex;
+ background-repeat: no-repeat;
+ justify-content: flex-end;
+}
+.About_forms{
+  width: 600px;
+  margin-right: 100px;
+  background-color: white;
+  margin-top: 50px;
+  padding: 20px;
+  border-radius: 25px;
+  height: 65vh;
+}
+.About_info{
+  display: flex;
+  width: 550px;
+  height: 450px;
+  font-size: 20px;
+  margin-top: 70px;
+
+}
+.About_h1{
+  color:rgb(0,56,102) ;
+  border-left: 7px solid rgb(255,66,0) ;
+  padding-left: 10px;
+}
+.About_inputs{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+
+}
+input{
+  font-size: 18px;
+  color: rgb(156,150,143);
+  height: 30px;
+  background-color: white;
+  border-radius: 5px;
+}
+label{
+  font-size: 20px;
+  color: rgb(0,56,102);
+  font-weight: 500;
+}
+.About_button{
+  background-color: rgb(0,56,102);
+  border-color:rgb(0,56,102);
+  color: white  ;
+  font-size: 20px;
+  width: 120px;
+  padding: 10px;
+  cursor: pointer;
+  margin-top: 30px;
+}
+.About_button:hover{
+  background-color: rgb(255,66,0);
+  border-color:rgb(255,66,0);
+}
+.about_btnspan{
+  font-size: 15px;
+  margin-left: 5px;
+}
+.services__wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 50px;
+  row-gap: 50px;
+}
+.servicesitems_title{
   text-align: center;
+  color: rgb(0,56,102);
+  font-weight: 500;
+}
+.servicesitems_img{
+  width: 400px;
+  height: 300px;
+}
+.servicesitems_info{
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: whitesmoke;
+  
+}
+.servicesitems_text{
+  text-align: center;
+  color: rgb(0,56,102);
+  font-size: 20px;
+  width: 300px;
+  font-weight: 300;
+}
+.Services_title{
+  text-align: center;
+  margin: 100px;
+  font-size: 40px;
+  color: rgb(0,56,102);
+}
+.servicesitems_icon{
+  height: 30px;
+  width: auto;
+  margin-right: -10px;
+  margin-left: 10px;
+}
+.servicesitems_title_container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.serviceitems_button{
+  background-color: rgb(0,56,102);
+  border-color:rgb(0,56,102);
+  color: white  ;
+  font-size: 20px;
+  width: 120px;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.serviceitems_button:hover{
+  background-color: rgb(255,66,0);
+  border-color:rgb(255,66,0);
 }
+.Imageslider_contianer{
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+}
+.Offers_title{
+  text-align: center;
+  margin: 100px;
+  font-size: 40px;
+  color: rgb(0,56,102);
+}
+.Offers_container{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  height: 100vh;
+  background-color: whitesmoke;
+  padding-bottom: 80px;
+}
+.Offers_Items{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  column-gap: 80px;
+}
+.Offers_Items_images{
+  width: 400px;
+  height: 400px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+} 
+.Offers_Items_container{
+display:  flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
+.offer_items_title{
+  margin-top: 60px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  text-align: center;
+  color: rgb(0,56,102);
+  font-weight: 500;
+  font-size: 25px;
+}
+.offer_items_text{
+  text-align: center;
+  color: rgb(0,56,102);
+  font-size: 20px;
+  width: 300px;
+  font-weight: 300;
+  margin-bottom: -10px;
+}
+.service_container{
+  height: 100vh;
+}
+.contact_icons{
+  height: 50px;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.contact_info{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 30px;
 }
+.footer_container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 60vh;
+  row-gap: 60px;
+  color: white;
+  background-color: rgb(0,56,102);;
+}
+.footer_title{
+  font-size: 30px;
+  margin-bottom: -20px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+}
+.footer_text{
+  font-size: 20px;
+  text-align: center;
+  font-weight: 300;
+}
+.footer_email{
+  color: white
+}
+.footer_email:hover{
+  color: rgba(245, 245, 245, 0.774);
+}
+@media screen and (max-width: 1370px) {
+  .Offers_container{
+    height: auto;
   }
-  to {
-    transform: rotate(360deg);
+  .service_container{
+    height: auto;
+    margin-bottom: 40px;
+  }
+  .Offers_Items_container{
+    margin-bottom: 100px;
+  }
+  .About{
+    height: 60vh;
+  }
+  .About_forms{
+    width: 600px;
+    margin-right: 100px;
+    background-color: white;
+    margin-top: 50px;
+    padding: 20px;
+    border-radius: 25px;
+    height: 50vh;
+  }
+
+}
+@media screen and (min-width: 800px) {
+  .hidden2{
+    display: none;
+  }
+}
+@media screen and (max-width: 800px) {
+  .About{
+    height: 100vh;
+    justify-content: center;
+    margin-top: 0px;
+    
+  }
+  .hidden{
+    display: none;
+  }
+  .About_forms{
+    height: 700px;
+    margin-right: 0;
+    width: 300px;
+    margin-top: 140px;
+  }
+
+  .About_h1{
+    width: 300px;
+  }
+  .About_info{
+    width: 300px;
+
+  }
+}
+@media screen and (max-width: 600px) {
+  .About_info{
+    width: 250px;
+    margin-top: 0px;
+
+  }
+  .About_h1{
+    color: white;
+    margin-top: 110px;
+    font-size: 20px;
+
+  }
+  .footer_text{
+    font-size: 15px;
+    margin-bottom: -40px;
+    padding: 20px;
+
+  }
+ 
+  label{
+    font-size: 15px;
+    margin-bottom: -10px;
+    color: white;
+
+  }
+  input{
+    font-size: 15px;
+    margin-top: -20px;
+    margin-bottom: -20px;
+  }
+  .About_forms{
+    background: transparent;
+    width: 250px;
+    margin-top: -20px;
+  }
+
+  .About_button{
+    width: 100px;
+    font-size: 13px;
+    padding: 10px;
+    margin-top: 0;
+  }
+  
+ 
+  .About{
+    justify-content: center;
+      background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(/src/Images/healthy2.jpg);
+    margin-top: 0;
+    background-position: right;
+
+  }
+
+  .Offers_Items_images{
+    width: 300px;
+    height: 300px;
+    margin-bottom: -30px;
+  }
+  .servicesitems_img{
+    width: 270px;
+    height: auto;
+  }
+  .servicesitems_info{
+    width: 270px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: whitesmoke;
+    
+  }
+  .servicesitems_text{
+    width: 200px;
+
+  }
+
+  .About_h1{
+    width: 250px;
+  }
+  
+  .navbar_logo{
+    width: 220px;
+  }
+  .footer_logo{
+    width: 220px;
+
+  }
+
+  .Services_title{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    font-size: 32px;
+  }
+  .Offers_title{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    font-size: 32px;
+    width: 250px;
+  }
+  .footer_title{
+    margin-top: 20px;
+    margin-bottom: -60px;
+    font-size: 25px;
+  } 
+
+  .contact_icons{
+    height: 30px;
+    margin-bottom: -20px;
+  }
+}
+@media screen and (max-width: 330px) {
+  label{
+     margin-top: -80px;
+     margin-bottom: -80px;
+  }
+  .About_inputs{
+    justify-content: space-around;
+    margin-top: 100px;
+  }
+  .About_button{
+    margin-top: -50px;
+  }
+  .About_h1{
+    margin-bottom: -20px;
+  }
+  .navbar_logo{
+    width: 160px;
+  }
+  .footer_logo{
+    width: 160px;
+
+  }
+  .Offers_Items_images{
+    width: 250px;
+    height: 250px;
+  
   }
 }
