--- a/src/App.css
+++ b/src/App.css
@@ -237,7 +237,7 @@ justify-content: center;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 60vh;
+  height: 600px;
   row-gap: 60px;
   color: white;
   background-color: rgb(0,56,102);;
@@ -328,7 +328,6 @@ justify-content: center;
   }
   .footer_text{
     font-size: 15px;
-    margin-bottom: -40px;
     padding: 20px;
 
   }
@@ -397,6 +396,7 @@ justify-content: center;
   }
   .footer_logo{
     width: 220px;
+    margin-top: 40px;
 
   }
 
@@ -412,8 +412,6 @@ justify-content: center;
     width: 250px;
   }
   .footer_title{
-    margin-top: 20px;
-    margin-bottom: -60px;
     font-size: 25px;
   } 
 
